--- a/lux-egida/package.json
+++ b/lux-egida/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.55.0",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
