--- a/lux-egida/package.json
+++ b/lux-egida/package.json
@@ -12,9 +12,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.0.2",
