--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
     "next": "^15.2.4",
+    "next-sitemap": "^4.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
@@ -31,5 +32,8 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
+  },
+  "scripts": {
+    "postbuild": "next-sitemap"
   }
 }
